--- a/registry.yaml
+++ b/registry.yaml
@@ -1,17 +1,19 @@
 commands:
-  - name: shard
+-   name: shard
     description: Shard the input file into smaller files
     path: cli-shard
     author: Honi Zhang <zhang.h.n@foxmail.com>
     latest: 0.1.0
     versions:
-      - version: 0.1.0
+    -   version: 0.1.0
         commit: d2ed9b36d18fba223ca4920f8deb3da93105e964
-  - name: sview
+-   name: sview
     description: Pretty view for available resources in Slurm
     path: cli-sview
     author: Honi Zhang <zhang.h.n@foxmail.com>
-    latest: 0.1.0
+    latest: 0.1.1
     versions:
-      - version: 0.1.0
+    -   version: 0.1.1
+        commit: cfc07a3e942ef6690f82f742971f8952c3421208
+    -   version: 0.1.0
         commit: 4c0a0d7385791183fc0ff2e02705f0aef5c83cb9
