--- a/registry.yaml
+++ b/registry.yaml
@@ -3,8 +3,10 @@ commands:
     description: Shard the input file into smaller files
     path: cli-shard
     author: Honi Zhang <zhang.h.n@foxmail.com>
-    latest: 0.1.0
+    latest: 0.1.1
     versions:
+    -   version: 0.1.1
+        commit: 27c82721da6a3fb18b49a0811904eccbe60483c5
     -   version: 0.1.0
         commit: d2ed9b36d18fba223ca4920f8deb3da93105e964
 -   name: sview
