--- a/.github/workflows/update_registry.yaml
+++ b/.github/workflows/update_registry.yaml
@@ -41,7 +41,7 @@ jobs:
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           git add registry.yaml
-          git commit -m "registry: auto-update registry [skip cli]"
+          git commit -m "registry: auto-update registry [skip ci]"
           git push origin main
         fi
 
