--- a/.github/workflows/update_registry.yaml
+++ b/.github/workflows/update_registry.yaml
@@ -29,14 +29,14 @@ jobs:
     - name: Run registry updater
       run: |
         set -e
-        # 处理首次提交的情况（before SHA为空）
-        BEFORE_SHA="${{ github.event.before || 'HEAD~1' }}"
+
+        git diff --name-only ${{ github.event.before }} ${{ github.event.after }}
         python update_registry.py \
-          --before "$BEFORE_SHA" \
-          --after "${{ github.event.after }}"
-        # 配置Git认证
+          --before ${{ github.event.before }} \
+          --after ${{ github.event.after }}
+  
         git remote set-url origin https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
-        # 仅在registry.yaml有变更时提交
+
         if git diff --quiet HEAD -- registry.yaml; then
           echo "No registry changes to commit"
         else
