ci: Enhance PR registry validation error message
- Update GitHub Actions workflow to provide more specific CLI validation instructions
- Include base and current SHA in error message for precise debugging
- Improve guidance for running update_registry.py with targeted validation

--- a/.github/workflows/check_registry_from_pr.yaml
+++ b/.github/workflows/check_registry_from_pr.yaml
@@ -51,5 +51,5 @@ jobs:
             issue_number: context.issue.number,
             owner: context.repo.owner,
             repo: context.repo.repo,
-            body: '⚠️ Registry update check failed. Please run `update_registry.py` locally to check it.'
+            body: '⚠️ Registry update check failed. Please run `update_registry.py --before "${{ steps.get_base_sha.outputs.base_sha }}" --after "HEAD" --check-cli` locally to check it.'
           }) 
