--- a/cli-code2cursor/pyproject.toml
+++ b/cli-code2cursor/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "cli-code2cursor"
-version = "0.1.0"
+version = "0.1.1"
 description = "Tools to migrate from vscode to cursor."
 authors = [
     { name = "Honi Zhang", email = "zhang.h.n@foxmail.com" }
@@ -9,7 +9,8 @@ readme = "README.md"
 requires-python = ">=3.7"
 license = { text = "MIT" }
 dependencies = [
-    "click"
+    "click",
+    "questionary"
 ]
 
 [project.scripts]
