feat(code2cursor): Add user snippets migration support
- Implement bidirectional snippet migration between VSCode and Cursor
- Add new 'snippets' command with interactive selection
- Support conflict resolution for duplicate snippets
- Enhance snippet handling with dataclass and JSON5 parsing
- Add dependencies for appdirs, dataclasses, and json5

--- a/cli-code2cursor/pyproject.toml
+++ b/cli-code2cursor/pyproject.toml
@@ -10,7 +10,10 @@ requires-python = ">=3.7"
 license = { text = "MIT" }
 dependencies = [
     "click",
-    "questionary"
+    "questionary",
+    "appdirs",
+    "dataclasses",
+    "json5"
 ]
 
 [project.scripts]
