--- a/cli-code2cursor/pyproject.toml
+++ b/cli-code2cursor/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "cli-code2cursor"
-version = "0.1.2"
+version = "0.1.3"
 description = "Tools to migrate from vscode to cursor."
 authors = [
     { name = "Honi Zhang", email = "zhang.h.n@foxmail.com" }
@@ -13,7 +13,8 @@ dependencies = [
     "questionary",
     "appdirs",
     "dataclasses",
-    "json5"
+    "json5",
+    "dataclasses-json"
 ]
 
 [project.scripts]
